--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.859.0",
     "autoprefixer": "^10.4.21",
     "next": "15.3.5",
     "postcss": "^8.5.6",
